...
 */
object OverviewScreenTestTags {
  /** Test tag for the FloatingActionButton used to create a new ToDo item. */
  const val CREATE_TODO_BUTTON = "createTodoFab"

  /** Test tag for the message displayed when there are no ToDo items. */
  const val EMPTY_TODO_LIST_MSG = "emptyTodoList"

  /** Test tag for the LazyColumn that displays the list of ToDo items. */
  const val TODO_LIST = "todoList"

  /** Test tag for the search bar used to search for todos */
  const val SEARCH_BAR = "searchBar"

  /** Test tag for the sort menu button */
  const val SORT_MENU_BUTTON = "sortMenuButton"
...
